위시리스트 완료, 구매, 판매 구현 전